--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -376,7 +376,7 @@
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="28N-LA-eCN">
-                                                                    <rect key="frame" x="20" y="10" width="298" height="151"/>
+                                                                    <rect key="frame" x="20" y="10" width="298" height="150"/>
                                                                 </imageView>
                                                             </subviews>
                                                         </view>
@@ -397,38 +397,104 @@
                                                     <outlet property="delegate" destination="TVx-yg-1e8" id="0kj-5V-Spz"/>
                                                 </connections>
                                             </collectionView>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1hS-yD-fl9">
+                                                <rect key="frame" x="0.0" y="242.5" width="375" height="688.5"/>
+                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4hs-Ql-qY1">
+                                                    <size key="itemSize" width="191" height="206"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categoryCell" id="Cao-Pa-auv" customClass="CategoriesCollectionViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
+                                                        <rect key="frame" x="92" y="0.0" width="191" height="206"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                            <rect key="frame" x="0.0" y="0.0" width="191" height="206"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Niq-bK-OsM">
+                                                                    <rect key="frame" x="1" y="1" width="191" height="206"/>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2P9-2P-Jgf">
+                                                                    <rect key="frame" x="20" y="162" width="151" height="24"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                    <color key="shadowColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <size key="shadowOffset" width="0.0" height="-2"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </view>
+                                                        <constraints>
+                                                            <constraint firstItem="Niq-bK-OsM" firstAttribute="leading" secondItem="Cao-Pa-auv" secondAttribute="leading" constant="1" id="3fR-bg-nQj"/>
+                                                            <constraint firstAttribute="trailing" secondItem="2P9-2P-Jgf" secondAttribute="trailing" constant="20" id="9Bd-gg-lmb"/>
+                                                            <constraint firstItem="Niq-bK-OsM" firstAttribute="top" secondItem="Cao-Pa-auv" secondAttribute="top" constant="1" id="KdD-uD-jvN"/>
+                                                            <constraint firstItem="Niq-bK-OsM" firstAttribute="width" secondItem="Cao-Pa-auv" secondAttribute="width" id="YG3-Lo-SQd"/>
+                                                            <constraint firstAttribute="bottom" secondItem="2P9-2P-Jgf" secondAttribute="bottom" constant="20" id="h1u-yL-a5C"/>
+                                                            <constraint firstItem="2P9-2P-Jgf" firstAttribute="leading" secondItem="Cao-Pa-auv" secondAttribute="leading" constant="20" id="iOj-0N-1eR"/>
+                                                            <constraint firstItem="Niq-bK-OsM" firstAttribute="height" secondItem="Cao-Pa-auv" secondAttribute="height" id="ph6-Qp-iQs"/>
+                                                        </constraints>
+                                                        <connections>
+                                                            <outlet property="categoryImageView" destination="Niq-bK-OsM" id="GKh-BV-JYJ"/>
+                                                            <outlet property="categoryLabel" destination="2P9-2P-Jgf" id="VUS-AV-2wb"/>
+                                                        </connections>
+                                                    </collectionViewCell>
+                                                </cells>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="TVx-yg-1e8" id="MZi-Bw-OQf"/>
+                                                    <outlet property="delegate" destination="TVx-yg-1e8" id="qU1-Kq-Fq9"/>
+                                                </connections>
+                                            </collectionView>
+                                            <searchBar contentMode="redraw" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="App-v1-Ec2">
+                                                <rect key="frame" x="0.0" y="186.5" width="375" height="56"/>
+                                                <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </searchBar>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="1" green="0.86274509799999999" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
+                                            <constraint firstItem="1hS-yD-fl9" firstAttribute="top" secondItem="App-v1-Ec2" secondAttribute="bottom" id="J4y-eu-bJH"/>
+                                            <constraint firstItem="App-v1-Ec2" firstAttribute="top" secondItem="uXK-D8-men" secondAttribute="bottom" id="JfP-4a-vin"/>
+                                            <constraint firstAttribute="height" constant="1000" id="JpV-Im-plc"/>
                                             <constraint firstItem="uXK-D8-men" firstAttribute="leading" secondItem="arP-Lr-xmX" secondAttribute="leading" id="Sn7-Vg-58m"/>
                                             <constraint firstItem="uXK-D8-men" firstAttribute="centerX" secondItem="arP-Lr-xmX" secondAttribute="centerX" id="fzc-dL-6EE"/>
                                             <constraint firstItem="uXK-D8-men" firstAttribute="top" secondItem="arP-Lr-xmX" secondAttribute="top" id="hYb-hg-mrn"/>
-                                            <constraint firstAttribute="height" constant="1000" id="x7L-WL-bWu"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="arP-Lr-xmX" secondAttribute="trailing" id="4TE-e1-Chc"/>
-                                    <constraint firstItem="arP-Lr-xmX" firstAttribute="leading" secondItem="4Yx-ZQ-zw7" secondAttribute="leading" id="6ev-Xe-RE7"/>
-                                    <constraint firstItem="arP-Lr-xmX" firstAttribute="top" secondItem="4Yx-ZQ-zw7" secondAttribute="top" id="Asu-an-6EP"/>
-                                    <constraint firstAttribute="bottom" secondItem="arP-Lr-xmX" secondAttribute="bottom" id="DB7-X9-YRR"/>
+                                    <constraint firstItem="arP-Lr-xmX" firstAttribute="leading" secondItem="4Yx-ZQ-zw7" secondAttribute="leading" id="DEL-e1-VjN"/>
+                                    <constraint firstAttribute="trailing" secondItem="arP-Lr-xmX" secondAttribute="trailing" id="I2Z-gT-4VY"/>
+                                    <constraint firstItem="arP-Lr-xmX" firstAttribute="width" secondItem="4Yx-ZQ-zw7" secondAttribute="width" id="WTy-2w-1Jv"/>
+                                    <constraint firstAttribute="bottom" secondItem="arP-Lr-xmX" secondAttribute="bottom" constant="-69" id="WWP-Gg-BIT"/>
+                                    <constraint firstItem="arP-Lr-xmX" firstAttribute="top" secondItem="4Yx-ZQ-zw7" secondAttribute="top" id="a7v-8x-p0b"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.86274509799999999" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="arP-Lr-xmX" firstAttribute="width" secondItem="KnH-Bt-m3H" secondAttribute="width" id="5R8-iK-IOq"/>
+                            <constraint firstItem="1hS-yD-fl9" firstAttribute="bottom" secondItem="Hu0-qa-Osr" secondAttribute="bottom" id="9X4-9o-h75"/>
+                            <constraint firstItem="4Yx-ZQ-zw7" firstAttribute="width" secondItem="KnH-Bt-m3H" secondAttribute="width" id="FGi-3D-Mf8"/>
+                            <constraint firstItem="1hS-yD-fl9" firstAttribute="width" secondItem="KnH-Bt-m3H" secondAttribute="width" id="Fg3-Qr-vDF"/>
+                            <constraint firstItem="App-v1-Ec2" firstAttribute="leading" secondItem="Hu0-qa-Osr" secondAttribute="leading" id="RBc-6s-4jn"/>
+                            <constraint firstItem="App-v1-Ec2" firstAttribute="width" secondItem="KnH-Bt-m3H" secondAttribute="width" id="eDP-ge-gW9"/>
                             <constraint firstItem="4Yx-ZQ-zw7" firstAttribute="top" secondItem="Hu0-qa-Osr" secondAttribute="top" id="ehz-fV-VKz"/>
+                            <constraint firstItem="App-v1-Ec2" firstAttribute="centerX" secondItem="Hu0-qa-Osr" secondAttribute="centerX" id="fm3-ib-bvm"/>
                             <constraint firstItem="4Yx-ZQ-zw7" firstAttribute="leading" secondItem="Hu0-qa-Osr" secondAttribute="leading" id="k4p-en-GLq"/>
                             <constraint firstItem="Hu0-qa-Osr" firstAttribute="trailing" secondItem="4Yx-ZQ-zw7" secondAttribute="trailing" id="p02-1h-XgC"/>
                             <constraint firstItem="Hu0-qa-Osr" firstAttribute="bottom" secondItem="4Yx-ZQ-zw7" secondAttribute="bottom" id="rNV-E1-3OP"/>
+                            <constraint firstItem="1hS-yD-fl9" firstAttribute="leading" secondItem="Hu0-qa-Osr" secondAttribute="leading" id="uMD-8S-dyb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Hu0-qa-Osr"/>
                     </view>
                     <navigationItem key="navigationItem" id="ifl-Bp-omZ"/>
                     <size key="freeformSize" width="375" height="1000"/>
                     <connections>
-                        <outlet property="bannerColletionView" destination="uXK-D8-men" id="sdZ-fl-hWL"/>
+                        <outlet property="bannerColletionView" destination="uXK-D8-men" id="tDW-il-mRU"/>
+                        <outlet property="categoriesColletionView" destination="1hS-yD-fl9" id="7Jh-SC-wBv"/>
+                        <outlet property="categoriesSearchBar" destination="App-v1-Ec2" id="Zyp-S0-O6c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QmQ-rb-qch" userLabel="First Responder" sceneMemberID="firstResponder"/>
