--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -341,10 +341,10 @@
             </objects>
             <point key="canvasLocation" x="-1233" y="44"/>
         </scene>
-        <!--Home View Controller-->
+        <!--View Controller-->
         <scene sceneID="DBZ-sK-4Qe">
             <objects>
-                <viewController id="TVx-yg-1e8" customClass="HomeViewController" customModule="UnderConstructionApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="TVx-yg-1e8" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KnH-Bt-m3H">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -506,35 +506,35 @@
                                             <rect key="frame" x="0.0" y="0.0" width="178" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5O0-Gg-66m">
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5O0-Gg-66m">
                                                     <rect key="frame" x="0.0" y="0.0" width="178" height="150"/>
                                                     <color key="backgroundColor" red="1" green="0.86274509799999999" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="62P-Qb-ixV">
-                                                        <size key="itemSize" width="50" height="50"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="62P-Qb-ixV">
+                                                        <size key="itemSize" width="179" height="160"/>
                                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bannerCell" id="DhN-d7-ekY" customClass="BannerCollectionViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
-                                                            <rect key="frame" x="-80" y="0.0" width="338" height="170"/>
+                                                            <rect key="frame" x="0.0" y="-5" width="179" height="160"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                                <rect key="frame" x="0.0" y="0.0" width="338" height="170"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="179" height="160"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZBy-cr-W7B">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="338" height="170"/>
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZBy-cr-W7B">
+                                                                        <rect key="frame" x="10" y="0.0" width="159" height="160"/>
                                                                     </imageView>
                                                                 </subviews>
                                                             </view>
                                                             <constraints>
-                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="leading" secondItem="DhN-d7-ekY" secondAttribute="leading" id="EjM-Fq-ug2"/>
-                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="centerY" secondItem="DhN-d7-ekY" secondAttribute="centerY" id="Ofm-Wa-01n"/>
-                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="centerX" secondItem="DhN-d7-ekY" secondAttribute="centerX" id="UHf-CH-XS6"/>
-                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="height" secondItem="DhN-d7-ekY" secondAttribute="height" id="oMI-OK-fIB"/>
+                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="leading" secondItem="DhN-d7-ekY" secondAttribute="leading" constant="10" id="7vj-gY-oQT"/>
+                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="centerX" secondItem="DhN-d7-ekY" secondAttribute="centerX" id="8KS-yF-vGZ"/>
+                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="height" secondItem="DhN-d7-ekY" secondAttribute="height" id="b3f-BK-Q1Y"/>
+                                                                <constraint firstItem="ZBy-cr-W7B" firstAttribute="top" secondItem="DhN-d7-ekY" secondAttribute="top" id="cgP-nH-5ld"/>
                                                             </constraints>
-                                                            <size key="customSize" width="338" height="170"/>
+                                                            <size key="customSize" width="179" height="160"/>
                                                             <connections>
                                                                 <outlet property="bannerImage" destination="ZBy-cr-W7B" id="W1l-fc-voL"/>
                                                             </connections>
@@ -618,10 +618,15 @@
                                     <outlet property="delegate" destination="06b-fj-miq" id="ntS-Ml-ZGp"/>
                                 </connections>
                             </collectionView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="SPY-Qe-p1f">
+                                <rect key="frame" x="177" y="309" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Gs7-2p-vM0" firstAttribute="trailing" secondItem="sd2-Iu-7W4" secondAttribute="trailing" id="Dcr-aT-7m7"/>
+                            <constraint firstItem="SPY-Qe-p1f" firstAttribute="centerY" secondItem="Gs7-2p-vM0" secondAttribute="centerY" id="DuD-lc-hyl"/>
+                            <constraint firstItem="SPY-Qe-p1f" firstAttribute="centerX" secondItem="Gs7-2p-vM0" secondAttribute="centerX" id="FLS-pl-Xr9"/>
                             <constraint firstItem="sd2-Iu-7W4" firstAttribute="leading" secondItem="Gs7-2p-vM0" secondAttribute="leading" id="Nts-Dx-IxI"/>
                             <constraint firstItem="Gs7-2p-vM0" firstAttribute="top" secondItem="sd2-Iu-7W4" secondAttribute="top" id="ag3-wg-Mva"/>
                             <constraint firstItem="Gs7-2p-vM0" firstAttribute="bottom" secondItem="sd2-Iu-7W4" secondAttribute="bottom" id="fUa-3G-jTi"/>
@@ -631,6 +636,7 @@
                     <navigationItem key="navigationItem" id="hnt-4I-6cK"/>
                     <connections>
                         <outlet property="baseCollectionView" destination="sd2-Iu-7W4" id="7lI-G3-Khk"/>
+                        <outlet property="homeActivityIndicator" destination="SPY-Qe-p1f" id="fEK-Zs-TmG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d4P-7d-g4R" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -794,7 +800,7 @@
         <image name="usuario" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4YU-rn-3QO"/>
+        <segue reference="n17-Rb-B2k"/>
         <segue reference="GOj-34-Pew"/>
     </inferredMetricsTieBreakers>
 </document>
